# commodity-exchange-zh

./: Cargo.toml  README.md
src/: ce.rs  czce.rs  dce.rs  lib.rs  main.rs  util.rs
src/cli/: mod.rs
src/dce/: mod.rs  parse.rs  select.rs
src/sql/: ce.sql  czce.sql  dce.sql
src/util/: clickhouse.rs  mod.rs
tests/: data.rs  dce.bincode  dce.html
tests/snapshots/: data__dce-downloadlink.snap  data__dce-v-2022.snap
