[package]
name = "commodity-exchange-zh"
version = "0.1.0"
edition = "2021"
publish = ["ktra"]

[dependencies]
calamine = "0.22"
minreq = "2"
zip = { version = "0.6", default-features = false }
log = "0.4"
simplelog = "0.12"
compact_str = { version = "0.7", features = ["serde"] }
bytesize = "1"
serde = { version = "1", features = ["derive"] }
regex = "1"
time = { version = "0.3", features = ["parsing", "serde"] }
csv = "1"

tabled = { version = "0.14", optional = true }

[dev-dependencies]
insta = "1"

[[test]]
name = "data"
path = "./tests/data.rs"
required-features = ["tabled"]
