[package]
name = "commodity-exchange-zh"
version = "0.1.0"
edition = "2021"
publish = ["ktra"]

[dependencies]
calamine = "0.22"
ureq = "2"
zip = { version = "0.6", default-features = false }
log = "0.4"
simplelog = "0.12"
compact_str = { version = "0.7", features = ["serde"] }
bytesize = "1"
serde = { version = "1", features = ["derive"] }
regex = "1"
time = { version = "0.3", features = ["parsing", "serde-human-readable", "local-offset"] }
csv = "1"
color-eyre = "0.6"
argh = { version = "0.1", optional = true }
tabled = { version = "0.14", optional = true }
encoding_rs = "0.8"
tl = "0.7"
inquire = "0.6"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
insta = "1"

[features]
default = ["argh"]

[[bin]]
name = "ce"
path = "src/main.rs"
required-features = ["argh"]

[[test]]
name = "data"
path = "./tests/data.rs"
required-features = ["tabled"]
